src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: 'Inter', sans-serif, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  /* color: rgba(255, 255, 255, 0.87); */
  /* background-color: #242424; */

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  /* Font */

  --sp-title: 'Jacques Francois Shadow';
  --sp-title-size: 100px;



  /* colors */
  /* Dark Mode */
  --darkbg-color: #16012B;
  --text-color: #FFEBE0;
  --shapecard-bg: rgba(255, 249, 249, 0.05);
  --input-bg: rgba(32, 92, 182, 0.3);
  --navbar-box-shadow: 0px 4px 50px 20px rgba(0, 0, 0, 0.58);
  --sp-btn: linear-gradient(263.22deg, rgba(9, 137, 255, 0.46) -48.17%, rgba(68, 2, 134, 0.2116) 84.62%);

  /* Light Mode */
  --card-bg: rgba(39, 16, 62, 0.11);
  --lighbg-color: #FFEBE0;
  --text-color: #1E0101;
  --navbg: #F3E8FF;
}
.light-theme {
  --lighbg-color: #FFEBE0;
  --text-color: #1E0101;
}
body {
  overflow-x: hidden;
  background-color: var(--darkbg-color);
}

.App {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

main {
  flex: 1;
  max-width: 1280px;
  margin-inline: auto;
}

.spbtn {
  background: var(--sp-btn);
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.53);
}
.bnrcard-shadow{
  box-shadow: 0px 4px 50px 20px rgba(0, 0, 0, 0.40);
}
.btn {
  @apply px-8 py-2 rounded-lg font-semibold md:text-xl text-lg
}
.sp-inp {
  @apply inputBG outline-none px-5 py-3 rounded-lg placeholder:text-[#FFEBE0] placeholder:font-semibold placeholder:tracking-wider
}

.cardbg {
  background: var(--shapecard-bg);
}
.cardbgDark {
  background: rgba(39, 16, 62, 0.11);
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25)
}

.tpProfileBG{
  position: absolute;
  width: 90vw;
  height: 600px;
  left: 10%;
}
.ProfileBG{
  position: absolute;
  width: 90vw;
  height: 600px;
  left: -40%;
  top: 100px;

}

.inputBG{
  background-color: var(--input-bg);
}
.registerFormBG{
  position: absolute;
  transform: translateY(100px);
  left: 0;
  height: 500px;
  width: 100vw;
  ;
}

